# global-city-air-quality-observatory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runbook.md
.github/workflows/: tests.yml
airflow/: Dockerfile  README.md  air_quality_pipeline_dag.py  global_city_air_quality_observatory_dag.py
dashboards/: README.md  style-guide.md
docs/: README.md  analytics-and-metrics.md  architecture-decisions.md  custom-location-testing.md  dashboard-design.md  data-lake-design.md  data-source.md  environment-setup.md  execution-evidence.md  infrastructure.md  lessons-learned.md  local-setup.md  pipeline-orchestration.md  pipeline-overview.md  project-guide.md  project-plan.md  repository-structure.md  review-guide.md  reviewer-guide.md  submission-notes.md  zero-to-hero-tutorial.md
docs/images/: README.md
images/: README.md
ingestion/: README.md  city_scope.py  download_air_quality_data.py  find_location_ids_from_aws.py  legacy_location_targets_notes.md  location_targets.csv
legacy_processing/: README.md
processing/: check_silver_data_quality.py  clean_air_quality_data.py
scripts/: __init__.py  airflow_standalone.sh  compare_city_pollution.py  dbt_run.sh  dbt_test.sh
spark/: __init__.py  bronze_to_silver.py  check_silver_data_quality.py
sql/: mart_validation.sql  warehouse_validation.sql
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_pipeline_checks.py
warehouse/: load_to_bigquery.py
(+29 files in other folders)
