[project]
name = "global-city-air-quality-observatory"
version = "0.1.0"
description = "Batch data engineering project comparing air pollution trends and pollutant patterns across five global cities."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "boto3>=1.39.0",
    "google-cloud-bigquery>=3.35.0",
    "google-cloud-storage>=3.3.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=3.5.5",
    "requests>=2.32.5",
]
