[project]
name = "global-city-air-quality-observatory"
version = "0.1.0"
description = "Batch data engineering project comparing air pollution trends and pollutant patterns across five global cities."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "boto3>=1.39.0",
    "dbt-bigquery>=1.10,<1.12",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=3.5.5,<4",
]
